# rust-web-app

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: rust.yml
cleanup/: .gitignore  Cargo.toml
cleanup/src/: main.rs
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
rust-backend/src/tests/: mod.rs  test_helpers.rs  users.rs
rust-backend/src/tests/test_helpers/: test_db.rs
shared/: Cargo.toml
shared/src/: responses.rs
