[package]
name = "cleanup"
version = "0.1.0"
authors = ["Prashanth Valekar, Srinivas <srinivas.prashanth.valekar@sap.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std =  {version = "1.8.0", features=["attributes"]}
dotenv = "0.15.0"
sqlx = {version="0.5.1", features = ["runtime-async-std-native-tls", "macros", "chrono", "json", "postgres", "uuid"] }
futures = { version = "0.3", features = ["compat"] }
